# net-man-h

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
aur/: .SRCINFO  PKGBUILD  update-checksums.sh
data/: netman-h.desktop
legacy/frontend/: App.css  App.tsx  api.ts  types.ts
legacy/frontend/components/: ConnectionEditor.tsx  EthernetTab.tsx  HotspotTab.tsx  OverviewTab.tsx  Sidebar.tsx  StatusHeader.tsx  VpnTab.tsx  WifiTab.tsx  shared.tsx
legacy/tauri/: Cargo.toml  tauri.conf.json
legacy/tauri/src/: lib.rs  main.rs  nm.rs  theme.rs
scripts/: install.sh
src/: app.rs  main.rs  theme.rs
src/nm/: cli.rs  mod.rs  service.rs  types.rs
src/ui/: mod.rs  pages.rs  window.rs
