[package]
name = "net-man-h"
version = "0.2.0"
edition = "2021"
description = "Modern NetworkManager GUI for Omarchy / Hyprland"
authors = ["hemat"]

[dependencies]
gtk4 = { version = "0.10", features = ["v4_14"] }
libadwaita = { version = "0.8", features = ["v1_5"] }
glib = "0.21"
gio = "0.21"
dirs = "6"

[profile.release]
lto = true
strip = true
