[package]
name = "netman-h"
version = "0.2.0"
edition = "2021"
description = "Modern NetworkManager GUI for Omarchy / Hyprland"
authors = ["Hematullah Waziri <hematullahw@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hematw/net-man-h"
repository = "https://github.com/hematw/net-man-h"
keywords = ["networkmanager", "gtk", "libadwaita", "wifi", "omarchy"]
categories = ["gui"]

[dependencies]
gtk4 = { version = "0.10", features = ["v4_14"] }
libadwaita = { version = "0.8", features = ["v1_5"] }
glib = "0.21"
gio = "0.21"
dirs = "6"

[profile.release]
lto = true
strip = true
