[package]
name = "aether-net"
version = "0.1.0"
description = "Modern NetworkManager GUI for Omarchy"
authors = ["hemat"]
edition = "2021"

[lib]
name = "aether_net_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
